--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
+    "swiper": "^8.0.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
