--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.25.0",
     "connected-react-router": "^6.8.0",
+    "date-fns": "^2.28.0",
     "firebase": "^8.2.10",
     "global": "^4.4.0",
     "history": "^4.10.1",
