--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-stomp": "^5.1.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sockjs-client": "^1.6.0",
     "styled-components": "^5.2.1",
     "swiper": "^8.0.6",
     "web-vitals": "^2.1.0"
