--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "connected-react-router": "^6.8.0",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.0",
     "firebase": "^8.2.10",
     "global": "^4.4.0",
     "history": "^4.10.1",
