--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "aws s3 sync ./build s3://sohangsung.co.kr --profile=Administrator",
-    "invalidate": "aws cloudfront create-invalidation --profil=Administrator --distribution-id E246A4WHF2LGZK --paths /*"
+    "invalidate": "aws cloudfront create-invalidation --profile=Administrator --distribution-id E246A4WHF2LGZK --paths /*"
   },
   "eslintConfig": {
     "extends": [
