--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-code-input": "^3.10.1",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.3",
     "react-icons": "^4.3.1",
