--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "simplebar-react": "^2.3.6",
     "sockjs-client": "^1.6.0",
     "stompjs": "^2.3.3",
     "styled-components": "^5.2.1",
