--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-code-input": "^3.10.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.2.3",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -39,7 +40,19 @@
     "stompjs": "^2.3.3",
     "styled-components": "^5.2.1",
     "swiper": "^8.0.6",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "workbox-background-sync": "^5.1.4",
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-core": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-navigation-preload": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-range-requests": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4",
+    "workbox-streams": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
