--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-code-input": "^3.10.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.2.3",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
