--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.0",
     "firebase": "^8.2.10",
     "global": "^4.4.0",
+    "heic2any": "^0.0.3",
     "history": "^4.10.1",
     "immer": "^8.0.1",
     "lodash": "^4.17.21",
