--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.25.0",
+    "browser-image-compression": "^1.0.17",
     "connected-react-router": "^6.8.0",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.0",
