--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "net": "^1.0.2",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-code-input": "^3.10.1",
     "react-copy-to-clipboard": "^5.0.4",
